# django-two-factor-auth

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS  CONTRIBUTORS.rst  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_e2e.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  publish.yml  release.yml
.tx/: config
demo/: manage.py  settings.py  settings_private.py.dist  urls.py  views.py  wsgi.py
demo/templates/: base.html
docs/: Makefile  class-reference.rst  conf.py  configuration.rst  implementation.rst  implementing.rst  index.rst  installation.rst  management-commands.rst  reference.rst  release-notes.rst  requirements.rst  usage.rst
example/: forms.py  gateways.py  manage.py  models.py  requirements.txt  settings.py  settings_private.py.dist  settings_webauthn.py  urls.py  views.py
example/templates/: _base.html  _messages.html  home.html  registration.html  registration_complete.html  secret.html
tests/: models.py  settings.py  test_admin.py  test_checks.py  test_commands.py  test_device_filter.py  test_email.py  test_forms.py  test_gateway_views.py  test_gateways.py  test_noop.py  test_registry.py  test_totpdeviceform.py  test_utils.py  test_validators.py  test_views_backuptokens.py  test_views_change_double_authentication.py  test_views_disable.py  test_views_email.py  test_views_login.py  test_views_mixins.py  test_views_phone.py  test_views_profile.py  test_views_qrcode.py  test_views_setup.py  test_wizard.py  test_yubikey.py  tests.py  urls.py  urls_admin.py  urls_otp_admin.py  utils.py  views.py
tests/migrations/: 0001_initial.py
tests/templates/: 404.html  email_with_context.txt
two_factor/: __init__.py  abstracts.py  admin.py  apps.py  auth_backends.py  call_gateways.py  checks.py  compat.py  forms.py  models.py  signals.py  sms_gateways.py  urls.py  util.py  utils.py  validators.py  views.py  webauthn_utils.py
two_factor/gateways/: __init__.py  email.py  fake.py  twilio.py
two_factor/methods/: __init__.py  base.py  phone.py  yubikey.py
two_factor/middleware/: enforce2fa.py  threadlocals.py
two_factor/migrations/: 0001_initial.py  0001_squashed_0008_delete_phonedevice.py  0002_auto_20150110_0810.py  0002_auto__chg_field_token_seed.py  0003_add_model_phone_device.py  0003_auto_20150806_2156.py  0003_auto_20150817_1638.py  0003_auto_20150817_1733.py  0004_auto_20160205_1827.py  0004_v012_to_v020.py  0005_auto_20160224_0450.py  0005_auto__del_token__del_verifiedcomputer.py  0006_U2F_Device.py  0006_auto_20180812_1829.py  0006_emailauth.py  0006_emaildevice.py  0006_phonedevice_key_default.py  0007_auto_20201201_1019.py  0008_delete_phonedevice.py  0008_emaildevice.py  0008_webauthndevice.py  0009_auto_20210202_0847.py
two_factor/plugins/: registry.py
two_factor/south_migrations/: 0001_initial.py
two_factor/templatetags/: device_format.py  two_factor.py
(+287 files in other folders)
